--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ env:
   DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/api
   MANIFESTS_REPO: shaikhxsn/argo-app
   MANIFESTS_BRANCH: main
-  DEPLOYMENT_FILE: api/deployment.yml
+  DEPLOYMENT_FILE: my-api/deployment.yml
 
 jobs:
 
