--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,8 +1,30 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Elasticsearch"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "NodeUris": "http://elasticsearch:9200",
+          "AutoRegisterTemplate": true,
+          "IndexFormat": "api-logs-{0:yyyy.MM.dd}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "MyAPI"
     }
   },
   "AllowedHosts": "*"
