--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -4,7 +4,13 @@
       "Serilog.Sinks.Console",
       "Serilog.Sinks.Elasticsearch"
     ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Console"
